// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentCardsTest render with buttonAriaLabel set to: some button label 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    ariaLabel="some button label"
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with buttonAriaLabel set to: undefined 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with containerClassName set to: a-container 1`] = `
<div
  className="a-container collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with containerClassName set to: undefined 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with contentClassName set to: content-class-name-a 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content-class-name-a content"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with contentClassName set to: undefined 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: collapsed 1`] = `
<div
  className="collapsibleContainer collapsed"
>
  <CustomizedActionButton
    aria-expanded={false}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
</div>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: expanded 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;
